# fcitx-chewing

./: CMakeLists.txt  INSTALL  README  README.md
cmake/: FindChewing.cmake
data/: CMakeLists.txt
po/: CMakeLists.txt  de.po  fcitx-chewing.pot  ja.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  chewing.conf.in  config.c  eim.c  eim.h  fcitx-chewing.conf.in  fcitx-chewing.desc  fcitx-taigi.conf.in
