install(FILES taigi.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/imicon/)
install(FILES taigi.png DESTINATION share/icons/hicolor/48x48/apps/ RENAME fcitx-taigi.png)
install(FILES default/taigi.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/default)
install(FILES dark/taigi.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/dark)
install(FILES classic/taigi.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/classic)
